--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,33 @@
-# =========================
-# Add myself
-# =========================
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
-/CapsLock+run
-/CapsLock icon
-/old_version
-/img
-/clgif
-/.vscode
-/wb/node_modules
-# ignore files
-CapsLock+hotString.ini
-CapsLock+winsInfo.ini
-CapsLock+settings.ini
-CapsLock+winsInfosRecorder.ini
-youdaoApiKey.ahk
-gain.md
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Folder config file
-Desktop.ini
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+### VS Code ###
+.vscode/
+hsf.lock
+*.log
